<resources>
    <string name="app_name">"Quick Finder"</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="place_list_icon">Place List Icon</string>
    <string name="small_call_icon">Small Call Icon</string>
    <string name="small_website_icon">Small Website Icon</string>
    <string name="small_location_icon">Small Location Icon</string>

    <string name="phone_icon">Phone Icon</string>
    <string name="call">CALL</string>
    <string name="website_icon">Website Icon</string>

    <string name="website">WEBSITE</string>
    <string name="favourite_icon">Favourite Icon</string>
    <string name="favourite">FAVOURITE</string>
    <string name="small_location_status_icon">Small Location Status Icon</string>

    <string name="location_icon">Location Icon</string>

    <string name="google_direction_api_key">AIzaSyCjSeYdXABMwJkwIt6s7WMF9I0Kc5mh5kE</string>


    <string name="interstitial_full_screen">ca-app-pub-7796828333997958/537613893</string>
    <string name="Banner_id">ca-app-pub-7796828333997958/462200920</string>

   <!-- <string name="interstitial_full_screen">ca-app-pub-7796828333997958/5376138934</string>
    <string name="Banner_id">ca-app-pub-7796828333997958/4622009204</string>-->
</resources>
