<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_marginTop="10dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <ImageView
            android:id="@+id/small_location_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:contentDescription="@string/small_location_icon"
            android:padding="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/detailsmarker42" />

        <TextView
            android:id="@+id/location_address_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="4dp"
            android:layout_toEndOf="@+id/small_location_icon"
            android:layout_toRightOf="@+id/small_location_icon"
            android:textColor="@color/color_primary_text"
            android:textSize="16sp"
            tools:text="Maninagr Mogrwadi, Valsad - 396001" />

        <ImageView
            android:id="@+id/small_phone_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_address_text_view"
            android:contentDescription="@string/small_call_icon"
            android:padding="8dp"
            android:visibility="visible"
            android:scaleType="centerCrop"
            android:src="@drawable/detailsphone42" />


        <TextView
            android:id="@+id/location_phone_number_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_address_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_phone_icon"
            android:layout_toRightOf="@id/small_phone_icon"
            android:maxLines="1"
            android:textColor="@color/color_primary_text"
            android:textSize="16sp"
            tools:text="+91 2632 224585" />

        <ImageView
            android:id="@+id/small_website_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_phone_number_text_view"
            android:contentDescription="@string/small_website_icon"
            android:padding="8dp"
            android:visibility="visible"
            android:src="@drawable/detailswebsite42" />

        <TextView
            android:id="@+id/location_website_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_phone_number_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_website_icon"
            android:layout_toRightOf="@id/small_website_icon"
            android:maxLines="1"
            android:textColor="@color/color_primary_text"
            android:textSize="16sp"/>

        <ImageView
            android:id="@+id/small_location_status_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/location_website_text_view"
            android:contentDescription="@string/small_location_status_icon"
            android:padding="8dp"
            android:src="@drawable/detailstime42" />

        <TextView
            android:id="@+id/location_status_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_website_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_location_status_icon"
            android:layout_toRightOf="@id/small_location_status_icon"
            android:maxLines="1"
            android:textColor="@color/color_primary_text"
            android:textSize="16sp"
            tools:text="Open Now" />


        <ImageView
            android:id="@+id/small_location_distance_icon"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@id/small_location_status_icon"
            android:contentDescription="@string/small_location_status_icon"
            android:padding="8dp"
            android:src="@drawable/detailskm42" />

        <TextView
            android:id="@+id/location_distance_text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/location_status_text_view"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/small_location_status_icon"
            android:layout_toRightOf="@id/small_location_status_icon"
            android:maxLines="1"
            android:textColor="@color/color_primary_text"
            android:textSize="16sp"
            tools:text="2.0 km" />
        <!--  <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
              android:id="@+id/adView"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_alignParentStart="true"
              android:layout_below="@+id/location_distance_text_view"
              ads:adSize="BANNER"
              ads:adUnitId="@string/Banner_id"
              android:layout_alignParentLeft="true">

          </com.google.android.gms.ads.AdView>
-->
    </RelativeLayout>

</ScrollView>