<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbarlayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_placedetails"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center"
            android:gravity="center"
            app:contentInsetStart="0dp"
            app:contentInsetStartWithNavigation="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:id="@+id/toolbar_title_placedetails"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/text_color_white"
                android:textSize="17sp"
                android:textStyle="bold" />
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <fragment
            android:id="@+id/details_map"
            android:name="com.google.android.gms.maps.MapFragment"
            android:layout_width="match_parent"
            android:layout_height="220dp">

        </fragment>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary_black"
            android:baselineAligned="false"
            android:orientation="horizontal">


            <LinearLayout
                android:id="@+id/location_phone_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_phone_icon"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:contentDescription="@string/phone_icon"
                    android:src="@drawable/ic_call_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/call"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_website_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_website_icon"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:contentDescription="@string/website_icon"
                    android:src="@drawable/ic_public_white" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:contentDescription="@string/website_icon"
                    android:text="@string/website"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/location_favourite_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/location_favourite_icon"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:contentDescription="@string/favourite_icon"
                    android:src="@drawable/favourite_details_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="4dp"
                    android:text="@string/favourite"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </LinearLayout>



        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginTop="4dp"
            android:elevation="2dp">

            <include
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                layout="@layout/address" />

           <!-- <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="4dp">

                <ImageView
                    android:id="@+id/small_location_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:contentDescription="@string/small_location_icon"
                    android:padding="8dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/detailsmarker42" />

                <TextView
                    android:id="@+id/location_address_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="4dp"
                    android:layout_toEndOf="@+id/small_location_icon"
                    android:layout_toRightOf="@+id/small_location_icon"
                    android:textColor="@color/color_primary_text"
                    android:textSize="16sp"
                    tools:text="Maninagr Mogrwadi, Valsad - 396001" />

                <ImageView
                    android:id="@+id/small_phone_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/location_address_text_view"
                    android:contentDescription="@string/small_call_icon"
                    android:padding="8dp"
                    android:visibility="visible"
                    android:scaleType="centerCrop"
                    android:src="@drawable/detailsphone42" />


                <TextView
                    android:id="@+id/location_phone_number_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/location_address_text_view"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/small_phone_icon"
                    android:layout_toRightOf="@id/small_phone_icon"
                    android:maxLines="1"
                    android:textColor="@color/color_primary_text"
                    android:textSize="16sp"
                    tools:text="+91 2632 224585" />

                <ImageView
                    android:id="@+id/small_website_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/location_phone_number_text_view"
                    android:contentDescription="@string/small_website_icon"
                    android:padding="8dp"
                    android:visibility="visible"
                    android:src="@drawable/detailswebsite42" />

                <TextView
                    android:id="@+id/location_website_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_phone_number_text_view"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/small_website_icon"
                    android:layout_toRightOf="@id/small_website_icon"
                    android:maxLines="1"
                    android:textColor="@color/color_primary_text"
                    android:textSize="16sp"/>

                <ImageView
                    android:id="@+id/small_location_status_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/location_website_text_view"
                    android:contentDescription="@string/small_location_status_icon"
                    android:padding="8dp"
                    android:src="@drawable/detailstime42" />

                <TextView
                    android:id="@+id/location_status_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_website_text_view"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/small_location_status_icon"
                    android:layout_toRightOf="@id/small_location_status_icon"
                    android:maxLines="1"
                    android:textColor="@color/color_primary_text"
                    android:textSize="16sp"
                    tools:text="Open Now" />


                <ImageView
                    android:id="@+id/small_location_distance_icon"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/small_location_status_icon"
                    android:contentDescription="@string/small_location_status_icon"
                    android:padding="8dp"
                    android:src="@drawable/detailskm42" />

                <TextView
                    android:id="@+id/location_distance_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/location_status_text_view"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:layout_toEndOf="@id/small_location_status_icon"
                    android:layout_toRightOf="@id/small_location_status_icon"
                    android:maxLines="1"
                    android:textColor="@color/color_primary_text"
                    android:textSize="16sp"
                    tools:text="2.0 km" />
              &lt;!&ndash;  <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/adView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/location_distance_text_view"
                    ads:adSize="BANNER"
                    ads:adUnitId="@string/Banner_id"
                    android:layout_alignParentLeft="true">

                </com.google.android.gms.ads.AdView>
&ndash;&gt;
            </RelativeLayout>-->


        </android.support.v7.widget.CardView>


    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        app:behavior_peekHeight="100dp"
        app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
        tools:ignore="MissingPrefix">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_reviewdata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>